Using UUID id as key for EventPropertyEntity